// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/src/main.ts.hbs > 라우팅 N (mobile) 1`] = `
"import { enableProdMode } from "@angular/core";
import { bootstrapApplication } from "@angular/platform-browser";
import { provideHttpClient, withFetch } from "@angular/common/http";
import { provideSdAngular } from "@simplysm/angular";
import { AppPage } from "./AppPage";
import "./styles.scss";

if (typeof ngDevMode !== "undefined" && !ngDevMode) {
  enableProdMode();
}

bootstrapApplication(AppPage, {
  providers: [
    provideHttpClient(withFetch()),
    provideSdAngular({ clientName: "client-pda" }),
  ],
}).catch((err: unknown) => {
  console.error(err);
});
"
`;

exports[`client/src/main.ts.hbs > 라우팅 Y (web) 1`] = `
"import { enableProdMode } from "@angular/core";
import { bootstrapApplication } from "@angular/platform-browser";
import { provideHttpClient, withFetch } from "@angular/common/http";
import { provideRouter, withHashLocation } from "@angular/router";
import { provideSdAngular } from "@simplysm/angular";
import { AppPage } from "./AppPage";
import { routes } from "./routes";
import "./styles.scss";

if (typeof ngDevMode !== "undefined" && !ngDevMode) {
  enableProdMode();
}

bootstrapApplication(AppPage, {
  providers: [
    provideHttpClient(withFetch()),
    provideRouter(routes, withHashLocation()),
    provideSdAngular({ clientName: "client-admin" }),
  ],
}).catch((err: unknown) => {
  console.error(err);
});
"
`;

exports[`sd.config.ts.hbs > case-001: server+admin, DB=N 1`] = `
"import type { SdConfigFn } from "@simplysm/sd-cli";

const config: SdConfigFn = () => ({
  packages: {
    "server": {
      target: "server",
      env: {
        SERVER_PORT: "40080",
      },
      configs: {
        auth: {
          jwtSecret: "test-jwt-secret",
        },
      },
    },
    "common": {
      target: "neutral",
    },
    "client-common": {
      target: "browser",
    },
    "client-admin": {
      target: "client",
      server: "server",
    },
  },
});

export default config;
"
`;

exports[`sd.config.ts.hbs > case-002: server+admin+pda(mobile), DB=mysql 1`] = `
"import type { SdConfigFn } from "@simplysm/sd-cli";

const config: SdConfigFn = () => ({
  packages: {
    "server": {
      target: "server",
      env: {
        SERVER_PORT: "40080",
      },
      configs: {
        orm: {
          MAIN: {
            dialect: "mysql",
            host: "localhost",
            port: 3306,
            username: "root",
            password: "1234",
            database: "DEMO2",
            defaultIsolationLevel: "READ_UNCOMMITTED",
          },
        },
        auth: {
          jwtSecret: "test-jwt-secret",
        },
      },
    },
    "common": {
      target: "neutral",
    },
    "client-common": {
      target: "browser",
    },
    "client-admin": {
      target: "client",
      server: "server",
    },
    "client-pda": {
      target: "client",
      server: "server",
      pwa: false,
      capacitor: {
        appId: "kr.co.demo2.app",
        appName: "Demo2 Workspace",
        icon: "res/icon.png",
        platform: {
          android: {},
        },
      },
    },
  },
});

export default config;
"
`;

exports[`sd.config.ts.hbs > case-003: server=N, admin only 1`] = `
"import type { SdConfigFn } from "@simplysm/sd-cli";

const config: SdConfigFn = () => ({
  packages: {
    "client-admin": {
      target: "client",
    },
  },
});

export default config;
"
`;

exports[`server/src/main.ts.hbs > DB=N — OrmService 없음 1`] = `
"import path from "node:path";
import { env, num, parseBoolEnv } from "@simplysm/core-common";
import { setupConsola } from "@simplysm/core-node";
import { createServiceServer, getConfig } from "@simplysm/service-server";

setupConsola();

const rootConfig = await getConfig<Record<string, unknown>>(
  path.resolve(import.meta.dirname, ".config.json"),
);
const authConfig = rootConfig?.["auth"] as { jwtSecret: string } | undefined;
if (authConfig?.jwtSecret == null) {
  throw new Error("auth.jwtSecret 설정을 찾을 수 없습니다. .config.json을 확인하세요.");
}

export const server = createServiceServer({
  rootPath: import.meta.dirname,
  services: [],
  port: num.parseInt(env("SERVER_PORT"))!,
  auth: { jwtSecret: authConfig.jwtSecret },
});

if (!parseBoolEnv(env("DEV"))) {
  await server.listen();
}
"
`;

exports[`server/src/main.ts.hbs > DB=Y — OrmService 포함 1`] = `
"import path from "node:path";
import { env, num, parseBoolEnv } from "@simplysm/core-common";
import { setupConsola } from "@simplysm/core-node";
import { createServiceServer, getConfig, OrmService } from "@simplysm/service-server";

setupConsola();

const rootConfig = await getConfig<Record<string, unknown>>(
  path.resolve(import.meta.dirname, ".config.json"),
);
const authConfig = rootConfig?.["auth"] as { jwtSecret: string } | undefined;
if (authConfig?.jwtSecret == null) {
  throw new Error("auth.jwtSecret 설정을 찾을 수 없습니다. .config.json을 확인하세요.");
}

export const server = createServiceServer({
  rootPath: import.meta.dirname,
  services: [OrmService],
  port: num.parseInt(env("SERVER_PORT"))!,
  auth: { jwtSecret: authConfig.jwtSecret },
});

if (!parseBoolEnv(env("DEV"))) {
  await server.listen();
}
"
`;
